--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -7,7 +7,7 @@
 </style>
 
 <ul class="image-gallery">
-  {% for file in site.static_files %}
+  {% for file in site.static_files reversed %}
   {% if file.path contains include.folder %}
   {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.JPG' or file.extname == '.JPEG' or file.extname == '.gif' %}
   {% assign filenameparts = file.path | split: "/" %}
